# heat_equation

./: CMakeLists.txt  Readme.md
include/: fem_functions.h  include_files.h  solution_steps.h  tools.h
src/: fem_functions.cpp  main.cpp  solution_steps.cpp  tools.cpp
